--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="css/custom.css" rel="stylesheet" media="screen">
   </head>
   <body>
 
@@ -52,6 +53,20 @@
     </nav>
 
     <!-- End Nav Bar -->
+
+    <!-- Begin Side Bar -->
+
+    <div class="col-sm-3 col-md-2 sidebar">
+      <h3> Files </h3>
+          <ul class="nav nav-sidebar">
+            <li class="active"><a href="#"></a></li>
+            <li><a href="#">JesseHu.txt</a></li>
+            <li><a href="#">SamGinsberg.txt</a></li>
+            <li><a href="#">JoshuaMiller.txt</a></li>
+          </ul>
+    </div>
+
+    <!-- End Side Bar -->
 
     <h1>Hello, world!</h1>
     <script src="http://code.jquery.com/jquery.js"></script>
