--- a/index.html
+++ b/index.html
@@ -53,6 +53,21 @@
 
     <!-- End Nav Bar -->
 
+    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+      <h1 class="page-header">Ext Teditor</h1>
+      <div class="row placeholders">
+        
+      </div>
+
+      <h2 class="sub-header">Section title</h2>
+      <input type="text" id="text" />
+      <div class="row">
+        >
+      </div>
+    </div>
+
+
+
     <h1>Hello, world!</h1>
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
