fix sidebar not showing active

--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
     <div class="col-sm-3 col-md-2 sidebar">
       <h3> Files </h3>
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="#"></a></li>
-            <li><a href="#">JesseHu.txt</a></li>
+            <li class="active"><a href="#">JesseHu.txt</a></li>
             <li><a href="#">SamGinsberg.txt</a></li>
             <li><a href="#">JoshuaMiller.txt</a></li>
           </ul>
