add text entry form

--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
 
     <!-- End Side Bar -->
 
-    <h1>Hello, world!</h1>
+    <div class="col-sm-12 col-md-10">
+      <textarea id = "editor" class="form-control"></textarea>
+    </div>
+
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
