add in sticky footer

--- a/index.html
+++ b/index.html
@@ -67,8 +67,18 @@
 
     <!-- End Side Bar -->
 
+    <!-- Begin Editor -->
+
     <div class="col-sm-12 col-md-10">
       <textarea id = "editor" class="form-control"></textarea>
+    </div>
+
+    <!-- End Editor -->
+
+    <div id="footer">
+      <div class="container">
+        <p>made by some kids </p>
+      </div>
     </div>
 
     <script src="http://code.jquery.com/jquery.js"></script>
