--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
     <!-- Begin Editor -->
 
     <div class="col-sm-12 col-md-10">
+      <h3>Ex Teditor</h3>
+      <p>Enter your text here:</p>
       <textarea id = "editor" class="form-control"></textarea>
     </div>
 
