--- a/index.html
+++ b/index.html
@@ -69,19 +69,16 @@
 
     <!-- Begin Editor -->
 
-    <div class="col-sm-12 col-md-10">
+    <div class="col-sm-9 col-md-10">
       <h3>Ex Teditor</h3>
       <p>Enter your text here:</p>
       <textarea id = "editor" class="form-control"></textarea>
     </div>
 
     <!-- End Editor -->
-
-    <div id="footer">
-      <div class="container">
-        <p>made by some kids </p>
-      </div>
-    </div>
+    <footer>
+      <h3> Jesse Hu sucks </h3>
+    </footer>
 
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
