--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
       <h3>Ex Teditor</h3>
       <p>Enter your text here:</p>
       <textarea id = "editor" class="form-control"></textarea>
+      <button class="btn btn-default" type="button">Go!</button>
     </div>
 
     <!-- End Editor -->
