--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <!-- End Editor -->
     <footer>
-      <h3> Jesse Hu sucks </h3>
+      <h3>Made by Jesse Hu, Joshua Miller, Sam Ginsberg, and Ian McKiernan</h3>
     </footer>
 
     <script src="http://code.jquery.com/jquery.js"></script>
