--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     <div class="col-sm-9 col-md-10">
       <h3>Text Editor</h3>
       <p>Enter your text here:</p>
-      <textarea id = "name" class="form-control">Name</textarea>
-      <textarea id = "editor" class="form-control">Content</textarea>
+      <input type="text" id = "name" class="form-control" placeholder="File Name"></textarea>
+      <textarea id = "editor" class="form-control" placeholder="Content"></textarea>
       <button class="btn btn-default" type="button">Go!</button>
     </div>
 
