--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <p>Enter your text here:</p>
       <input type="text" id = "name" class="form-control" placeholder="File Name"></textarea>
       <textarea id = "editor" class="form-control" placeholder="Content"></textarea>
-      <button class="btn btn-default" type="button">Go!</button>
+      <button class="btn btn-default" type="button" onclick="createNewDoc()">Go!</button>
     </div>
 
     <!-- End Editor -->
