--- a/index.html
+++ b/index.html
@@ -28,24 +28,6 @@
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Options<b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a onclick="createNewDoc()" href="#">Save</a></li>
-                <li class="divider"></li>
-                <li><a href="#">Delete</a></li>
-                <li class="divider"></li>
-                <li><a href="#">Load</a></li>
-              </ul>
-            </li>
-          </ul>
-          <form class="navbar-form navbar-left" role="search">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search">
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-          </form>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
@@ -65,9 +47,10 @@
     <!-- Begin Editor -->
 
     <div class="col-sm-9 col-md-10">
-      <h3>Text Editor</h3>
+      <h3>Text Editor </h3>
       <p>Enter your text here:</p>
-      <input type="text" id = "name" class="form-control" placeholder="File Name"></textarea>
+      <input type="text" id = "name" class="form-control" placeholder="File Name">
+      <button id = "savebutton" class ="btn btn-lg btn-primary"onclick="createNewDoc()" href="#">Save</button> 
       <textarea id = "editor" class="form-control" placeholder="Content"></textarea>
     </div>
 
