implemented file overwriting

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <!-- End Editor -->
     <footer>
-      <h3>Made by Jesse Hu, Joshua Miller, Sam Ginsberg, and Ian McKiernan</h3>
+      <h3>Made by Jesse Hu, Joshua Miller, Sam Ginsburg, and Ian McKiernan</h3>
     </footer>
 
     <script src="http://code.jquery.com/jquery.js"></script>
