--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
 
     <!-- Begin Nav Bar -->
-
+   
     <nav class="navbar navbar-default" role="navigation">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -33,7 +33,7 @@
     </nav>
 
     <!-- End Nav Bar -->
-
+ <div id="container">
     <!-- Begin Side Bar -->
 
     <div class="col-sm-3 col-md-2 sidebar">
@@ -53,11 +53,17 @@
       <button id = "savebutton" class ="btn btn-lg btn-primary"onclick="createNewDoc()" href="#">Save</button> 
       <textarea id = "editor" class="form-control" placeholder="Content"></textarea>
     </div>
+  </div>
 
     <!-- End Editor -->
-    <footer>
-      <h3>Made by Jesse Hu, Joshua Miller, Sam Ginsburg, and Ian McKiernan</h3>
-    </footer>
+    
+    <!-- Begin Footer -->
+    <div id="footer">
+      <div class = "container">
+        <p>Made by Jesse Hu, Joshua Miller, Sam Ginsburg, and Ian McKiernan</p>
+      </div>
+    </div>
+    <!-- End Footer -->
 
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
